# DSPAPP_APK_PROTO

./: DSPAPP_Collab_Master_Executed_DualEncoded.md  interview.json
DSP_Project_Integrated/: AudioService.java  AudioService.java.patched2  AudioService.java.patched3  audio_ipc_client.py  audio_service.py  build_apk.sh  build_apk.sh.patched  build_apk.sh.patched2  buildozer.spec.patched  frontend_kivy.kv  frontend_kivy.py  frontend_kivy_control.py  main.py  native_dsp_integration.txt  native_integration_notes.json  patch_readme.txt
DSP_Project_Integrated/buildlog/: terminal_out091720251725.text
DSP_Project_Integrated/native_dsp/: CMakeLists.txt  build_native.sh  kiss_fft.c  kiss_fft.h  native_dsp.cpp
apk/debug/: output-metadata.json
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/include/: dsp_api.h
app/src/main/cpp/src/: dsp_controller.cpp  native-lib.cpp
app/src/main/java/com/example/dspa/: DSPController.kt  MainActivity.kt
